--- a/src/components/cart/cart.component.scss
+++ b/src/components/cart/cart.component.scss
@@ -82,9 +82,11 @@ h1 {
 label {
   color: $color-label;
 }
-
+h1{
+  margin-top: 20px;
+}
 .shopping-cart {
-  margin-top: -45px;
+  margin-top: 45px;
 }
 
 /* Column headers */
