--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -6,7 +6,9 @@
       </a></li>
     </ul>
   }
-  <a  (click)="openDialog()" href="#cart" id="add">ADD</a>
+  <a  (click)="openDialog()" href="#cart" id="add">ADD
+    <i class="fa-solid fa-plus"></i>
+  </a>
 </div>
 
 
