--- a/src/components/cart/cart.component.scss
+++ b/src/components/cart/cart.component.scss
@@ -180,7 +180,7 @@ h1{
   border: 0;
   margin-top: 20px;
   padding: 6px 25px;
-  background-color: #6b6;
+  background-color:  #2aa86b;
   color: #fff;
   font-size: 25px;
   border-radius: 3px;
