--- a/src/components/productlist/productlist.component.html
+++ b/src/components/productlist/productlist.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="menu">
           <div class="price">
-            {{ item.cost }}
+            ${{ item.cost }}
           </div>
           <div class="price">
             {{ item.inventory }}
