--- a/src/components/productlist/productlist.component.scss
+++ b/src/components/productlist/productlist.component.scss
@@ -60,7 +60,6 @@ $card_height: 500px;
     transform: rotateY(0deg);
     p {
       padding-top: 30px;
-      padding-bottom: 30px;
       font-size: 24px;
     }
     .image img {
@@ -71,7 +70,7 @@ $card_height: 500px;
       width: $card_width;
       height: 50px;
       top: 80%;
-      background-color: #6ba1a5;
+      background-color:  #2aa86b;
       color: #ddd;
       position: absolute;
       transition: all 0.7s;
@@ -175,7 +174,7 @@ $card_height: 500px;
   justify-content: center;
   gap: 20px;
   button{
-    background-color: #6ba1a5;
+    background-color:  #2aa86b;
     color: #ddd;
     border: none;
     padding: 5px 5px;
