--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 
-<app-navbar (newItemEvent)=" addItem($event) "></app-navbar>
-<app-productlist [productlist]="productList" (newItemEvent)="delete($event)" (productadd)="addToCart($event)">
-</app-productlist>
-<app-cart [cartList]="addCartList"></app-cart>
+<app-navbar (newItemEvent)="this.cardServices.addItem($event) "></app-navbar>
+<router-outlet></router-outlet>
 
