--- a/src/components/cart/cart.component.scss
+++ b/src/components/cart/cart.component.scss
@@ -180,14 +180,14 @@ h1{
   border: 0;
   margin-top: 20px;
   padding: 6px 25px;
-  background-color:  #2aa86b;
-  color: #fff;
+  background-color:  red;
+  color: white;
   font-size: 25px;
   border-radius: 3px;
 }
 
 .checkout:hover {
-  background-color: #494;
+  background-color: #d51c24;
 }
 
 /* Make adjustments for tablet */
