--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
+<tui-root>
 
-<app-navbar (newItemEvent)="this.cardServices.addItem($event) "></app-navbar>
+<app-navbar ></app-navbar>
 <router-outlet></router-outlet>
 
+
+</tui-root>
+<!--(newItemEvent)="this.cardServices.addItem($event) "-->
