--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,2 +1,4 @@
-<app-productlist [productlist]="this.cardServices.productList" (newItemEvent)="this.cardServices.delete($event)" (productadd)="this.cardServices.addToCart($event)">
+<app-productlist >
+
 </app-productlist>
+<!--[productlist]="this.cardServices.productList" (newItemEvent)="this.cardServices.delete($event)" (productadd)="this.cardServices.addToCart($event)">-->
