--- a/src/components/about/about.component.html
+++ b/src/components/about/about.component.html
@@ -1,4 +1,4 @@
-<!--<h1>Shopping Cart</h1>-->
+<!--<h1>About Cart</h1>-->
 
 <!--<div class="shopping-cart">-->
 
@@ -9,7 +9,7 @@
 <!--    <label class="product-quantity">Quantity</label>-->
 <!--  </div>-->
 
-<!--  @for(item of this.cardService.addCartList; track item.id){-->
+<!--  @for(item of this.cardService.detailProduct; track item.id){-->
 <!--    <div class="product">-->
 <!--      <div class="product-image">-->
 <!--        <img src="{{item.image}}">-->
@@ -25,6 +25,4 @@
 <!--    </div>-->
 
 <!--  }-->
-<!--  <button class="checkout" (click)="pay()">Checkout</button>-->
-<!--  <div class="product-line-price">Total: {{ total }}</div>-->
 <!--</div>-->
