--- a/src/components/productlist/productlist.component.html
+++ b/src/components/productlist/productlist.component.html
@@ -1,3 +1,12 @@
+<div class="wrap">
+  <div class="search">
+    <input type="text" class="searchTerm" placeholder="What are you looking for?">
+    <button type="submit" class="searchButton">
+      <i class="fa fa-search"></i>
+    </button>
+  </div>
+</div>
+<!--<h1>Sách bán chạy</h1>-->
 <div class="content" >
   @for (item of cardServices.productList; track item['name']) {
     @if(item['inventory']>0){
@@ -6,18 +15,21 @@
       >
         <p>{{ item['name'] }}</p>
         <p> {{ item['describtion'] }}</p>
-        <div class="image">
+        <div class="image"  (click)="getProductById(item.id)"
+             [routerLink]="['/card',item.id]">
+
           <img src="{{item['image']}}" alt="book" width="250" />
         </div>
         <div class="menu">
           <div class="price">
-            ${{ item['cost'] }}
+            {{ item['cost'] }}VND
           </div>
           <div class="price">
             {{ item['inventory'] }}
           </div>
           <div class="btn">
             <button
+              (click)="this.cardServices.addToCart(item)"
               >Add to Cart!
             </button>
             <button
@@ -37,8 +49,15 @@
 
 
 <dialog #appDialog>
-  <form class="form" [formGroup]="itemForm" (ngSubmit)="updateProduct(itemForm)">
-
+  <form class="form" [formGroup]="itemForm" (ngSubmit)="updateProduct()">
+    <div class="form-group">
+      <label for="cost">Name</label>
+      <input type="text" class="form-control" id="name" formControlName="name" placeholder="Enter name" />
+    </div>
+    <div class="form-group">
+      <label for="cost">Describtion</label>
+      <input type="text" class="form-control" id="describtion" formControlName="describtion" placeholder="Enter describtion" />
+    </div>
     <div class="form-group">
       <label for="cost">Cost</label>
       <input type="number" class="form-control" id="cost" formControlName="cost" placeholder="Enter cost" />
@@ -55,7 +74,7 @@
     </div>
   </form>
   <button mat-button mat-dialog-close (click)="closeDialog()">Close</button>
-  <button (click)="updateProduct(itemForm)" mat-flat-button color="primary">
+  <button (click)="updateProduct()" mat-flat-button color="primary">
     Submit
   </button>
 </dialog>
