--- a/src/components/cart/cart.component.html
+++ b/src/components/cart/cart.component.html
@@ -12,14 +12,14 @@
           <p>Giá: {{item.cost}} VNĐ</p>
           <div class="quantity">
             <button (click)="this.cardService.decrease(item)"
-                    style="padding: 4px 20px; border-radius: 12px; border: red;background-color: red;">Giảm</button>
+                    style="padding: 4px 20px; border-radius: 12px; border: red;background-color: red;color: white">Giảm</button>
             <p>Số lượng: {{item.stock}}</p>
             @if (item.inventory <=0) { <button disabled="true" (click)="this.cardService.increase(item)"
-                                             style="padding: 4px 20px; border-radius: 12px; border: none;background-color: red;">
+                                             style="padding: 4px 20px; border-radius: 12px; border: none;background-color: blue;">
               Tăng</button>
             }@else {
               <button (click)="this.cardService.increase(item)"
-                      style="padding: 4px 20px; border-radius: 12px; border: red;background-color: red;">Tăng</button>
+                      style="padding: 4px 20px; border-radius: 12px; border: red;background-color: blue; color: white">Tăng</button>
             }
             <p>Thành tiền: {{parseInt(item.cost)*item.stock}} VNĐ</p>
           </div>
@@ -32,9 +32,10 @@
     <div class="right">
       <p>Tổng số tiền phải thanh toán là: {{this.cardService.payment()}} VNĐ</p>
       <button (click)="handleClick()"
-              style="width: 300px; padding: 20px 20px; border-radius: 12px; background-color: red; color: white; font-size: 14px;">Thanh
+              style="width: 300px; padding: 20px 20px; border-radius: 12px;border: none; background-color: red; color: white; font-size: 14px;">Thanh
         toán</button>
     </div>
   }
 
 </div>
+
