--- a/src/components/productlist/productlist.component.scss
+++ b/src/components/productlist/productlist.component.scss
@@ -242,53 +242,198 @@ dialog h2 {
       margin-bottom: 10px;
     }
   }
+}
   @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+.wrap {
+  height: 40px;
+  position: absolute;
+  //top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+//  .search {
+//    width: 100%;
+//    position: relative;
+//    display: flex;
+//  }
+//
+//  .searchTerm {
+//    width: 100%;
+//    border: 3px solid #00b4cc;
+//    border-right: none;
+//    padding: 5px;
+//    height: 20px;
+//    border-radius: 5px 0 0 5px;
+//    outline: none;
+//    color: #9dbfaf;
+//  }
+//
+//  .searchTerm:focus {
+//    color: #00b4cc;
+//  }
+//
+//  .searchButton {
+//    width: 40px;
+//    height: 36px;
+//    border: 1px solid #00b4cc;
+//    background: #00b4cc;
+//    text-align: center;
+//    color: #fff;
+//    border-radius: 0 5px 5px 0;
+//    cursor: pointer;
+//    font-size: 20px;
+//  }
+//
+//  /*Resize the wrap to see the search bar change!*/
+//
+//
+//
+//:host {
+//  display: flex;
+//  gap: 1rem;
+//}
+//
+//.star {
+//  background: rgb(66, 139, 250);
+//  color: #fff;
+//}
+//:host {
+//  display: flex;
+//  gap: 1.2rem;
+//  min-width: 40.625rem;
+//}
+//
+//.badge {
+//  background: #aff218;
+//  color: #333;
+//}
+//
+//.money {
+//  background: #ffdd2d;
+//  color: #333;
+//}
+//
+//.poster {
+//  background: rgb(88, 192, 190);
+//  padding: 0.75rem;
+//  color: #fff;
+//  width: 13.9375rem;
+//  height: 8rem;
+//
+//  [tuiSubtitle] {
+//    color: #fff;
+//  }
+//
+//  &:after {
+//    //background: url(/assets/images/poster.svg) bottom right no-repeat;
+//  //}
+//
+//  &:hover:after {
+//    transform: scale(1.1);
+//  }
+//}
+//
+//.fly {
+//  background: rgb(101, 174, 234);
+//  padding: 0.75rem;
+//  color: #fff;
+//  width: 8rem;
+//  height: 8rem;
+//
+//  &:after {
+//    //background: url(/assets/images/fly.svg) bottom right no-repeat;
+//  }
+//
+//  &:hover:after {
+//    transform: scale(1.1);
+//  }
+//}
+//
+//.google,
+//.microsoft {
+//  padding: 0.75rem;
+//  background: var(--tui-base-02);
+//  height: 8rem;
+//  width: 8rem;
+//
+//  &:hover:after {
+//    transform: scale(1.1);
+//  }
+//}
+//
+//.google {
+//  [tuiSubtitle] {
+//    color: red;
+//  }
+//
+//  &:after {
+//    //background: url(/assets/images/google.svg) bottom right no-repeat;
+//  }
+//}
+//  .star {
+//    background: rgb(66, 139, 250);
+//    color: #fff;
+//  }
+//.microsoft {
+//  [tuiSubtitle] {
+//    color: #00b92d;
+//  }
+//
+//  &:after {
+//    //background: url(/assets/images/microsoft.svg) bottom right no-repeat;
+//  }
+//
+//}}
+.container {
+  max-width: 62.5rem;
+}
 
-  body {
-    background: #f2f2f2;
-    font-family: "Open Sans", sans-serif;
-  }
+.some-figure {
+  border-radius: 100%;
+  width: 3rem;
+  height: 3rem;
+  background-color: var(--tui-secondary-active);
+}
 
-  .search {
-    width: 100%;
-    position: relative;
-    display: flex;
-  }
+.tui-col_md-4{
 
-  .searchTerm {
-    width: 100%;
-    border: 3px solid #00b4cc;
-    border-right: none;
-    padding: 5px;
-    height: 20px;
-    border-radius: 5px 0 0 5px;
-    outline: none;
-    color: #9dbfaf;
-  }
+width: 100%;
+  padding: 20px;
+  display: grid;
+  grid-column: auto;
+  //flex-direction: row;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 
-  .searchTerm:focus {
-    color: #00b4cc;
-  }
+}
+tui-island{
+  max-width: 400px;
+  max-height: 400px;
+}
+.image{
+  height: 200px;
+  width: auto;
+}
+h3{
+//  text-align: center;
+}
+img{
+  border-radius: 20px 20px 0px 0px;
+  height: 150px;
+  width: 100%;
+}
 
-  .searchButton {
-    width: 40px;
-    height: 36px;
-    border: 1px solid #00b4cc;
-    background: #00b4cc;
-    text-align: center;
-    color: #fff;
-    border-radius: 0 5px 5px 0;
-    cursor: pointer;
-    font-size: 20px;
-  }
-
-  /*Resize the wrap to see the search bar change!*/
-  .wrap {
-    width: 30%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
+#btnCard{
+  width: 100%;
+  margin: 0.1rem;
+}
+.tui-island__paragraph{
+//  text-align: center;
+  color: red;
+}
+.tui-island__title{
+  max-height: 50px;
+  max-width: 400px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
