--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
 
 <router-outlet></router-outlet>
-
+ <!-- <app-couter></app-couter> -->
 
 </tui-root>
 <!--(newItemEvent)="this.cardServices.addItem($event) "-->
