--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -2,6 +2,7 @@
   <div id="top">
 
     <app-navbar ></app-navbar>
+
   </div>
   <div id="body">
     <!--<app-productlist >-->
@@ -9,6 +10,7 @@
     <router-outlet>
 
     </router-outlet>
+<!--    <app-about></app-about>-->
   </div>
  <div id="under">
    <app-footer></app-footer>
