--- a/src/app/page/home/home.component.scss
+++ b/src/app/page/home/home.component.scss
@@ -9,10 +9,13 @@
 }
 
 #body{
-  width:100%;
+  width:90%;
   height: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
 #under{
   width: 100%;
   height: 40%;
 }
+
