--- a/src/components/about/about.component.html
+++ b/src/components/about/about.component.html
@@ -1,22 +1,110 @@
-<div class="container">
-  <div class="item">
-    <img class="img" [src]="producte.image"/>
-    <div class="info">
-      <h2>Name: {{ producte.name }}</h2>
-      <p>Describtion: {{ producte.describtion }}</p>
-      <p>Cost: {{ producte.cost }} VNĐ</p>
-      <p>Inventory: {{ producte.inventory }}</p>
+<!--<div class="container">-->
+<!--  <div class="item">-->
+<!--    <img class="img" [src]="producte.image"/>-->
+<!--    <div class="info">-->
+<!--      <h2>Name: {{ producte.name }}</h2>-->
+<!--      <p>Describtion: {{ producte.describtion }}</p>-->
+<!--      <p>Cost: {{ producte.cost }} VNĐ</p>-->
+<!--      <p>Inventory: {{ producte.inventory }}</p>-->
+<!--    </div>-->
+
+<!--  </div>-->
+<!--  <div class="right">-->
+<!--    <button (click)="this.cardService.addToCart(producte)"-->
+<!--            style="width: 300px; padding: 20px 20px; border-radius: 12px; background-color: red; color:white; font-size: 14px;">-->
+<!--      Add To Cart-->
+<!--    </button>-->
+<!--  </div>-->
+
+
+<!--</div>-->
+
+<div class="card-wrapper">
+  <div class="card">
+    <!-- card left -->
+    <div class="product-imgs">
+      <div class="img-display">
+        <div class="img-showcase">
+          <img [src]="producte.image">
+
+        </div>
+      </div>
+
+      <div class="img-select">
+        <div class="img-item">
+          <a href="#" data-id="1">
+            <img [src]="producte.image">
+          </a>
+        </div>
+        <div class="img-item">
+          <a href="#" data-id="2">
+            <img [src]="producte.image">
+          </a>
+        </div>
+        <div class="img-item">
+          <a href="#" data-id="3">
+            <img [src]="producte.image">
+          </a>
+        </div>
+        <div class="img-item">
+          <a href="#" data-id="4">
+            <img [src]="producte.image">
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- card right -->
+    <div class="product-content">
+      <h2 class="product-title">{{ producte.name }}</h2>
+
+
+      <div class="product-price">
+        <p class="last-price">{{ producte.cost }} VND </p>
+        <!--        <p class="new-price">New Price: <span>$249.00 (5%)</span></p>-->
+      </div>
+
+      <div class="product-detail">
+        <h2>about this item: </h2>
+        <p>{{ producte.describtion }}</p>
+
+        <ul>
+          <li>Name: <span>{{ producte.name }}</span></li>
+          <li>Available: <span>in stock</span></li>
+          <li>Category: <span>Books</span></li>
+          <li>Shipping Area: <span>All over the world</span></li>
+          <li>Shipping Fee: <span>Free</span></li>
+        </ul>
+      </div>
+
+      <button
+        tuiButton
+        type="button"
+
+        (click)="this.cardService.addToCart(producte)"
+        class="button"
+      >
+
+        Add To Cart
+      </button>
+      <div class="social">
+        <button icon="tuiIconFacebook" tuiIconButton type="button" class="tui-space_right-3 tui-space_bottom-3"
+                appearance="outline" ></button>
+        <button icon="tuiIconBluetooth" tuiIconButton type="button" class="tui-space_right-3 tui-space_bottom-3"
+                appearance="outline" ></button>
+        <button icon="tuiIconGithub" tuiIconButton type="button" class="tui-space_right-3 tui-space_bottom-3"
+                appearance="outline" ></button>
+        <button icon="tuiIconInstagram" tuiIconButton type="button" class="tui-space_right-3 tui-space_bottom-3"
+                appearance="outline" ></button>
+        <button icon="tuiIconSend" tuiIconButton type="button" class="tui-space_right-3 tui-space_bottom-3"
+                appearance="outline"></button>
+      </div>
     </div>
 
+
+
   </div>
-  <div class="right">
-    <button (click)="this.cardService.addToCart(producte)"
-            style="width: 300px; padding: 20px 20px; border-radius: 12px; background-color: red; color:white; font-size: 14px;">
-      Add To Cart
-    </button>
-  </div>
-
-
-
 </div>
-<app-footer></app-footer>
+
+
+
+
