--- a/src/app/page/admin-product/admin-product.component.scss
+++ b/src/app/page/admin-product/admin-product.component.scss
@@ -1,6 +1,41 @@
-tui-input{
+tui-input {
   margin-top: 20px;
 }
-.button{
+
+.button {
+  margin-top: 50px;
+}
+
+.addbutton {
+  margin: 20px;
+  height: 56px;
+  width: 100px;
+}
+
+.search {
+  display: flex;
+  height: 50px;
+  margin-bottom: 30px;
+
+}
+
+.input {
+  width: 80%;
+  margin-right: 20px;
   margin-top: 20px;
 }
+td{
+  width: 200px;
+  height: 50px;
+  
+}
+#des{
+  max-width: 200px;
+  max-height: 50px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+
