--- a/src/components/login/login.component.scss
+++ b/src/components/login/login.component.scss
@@ -68,11 +68,11 @@ h1 {
 button {
   width: 288px;
   height: 48px;
-  background-color: black;
+  background-color: #526ed3;
   color: #FFFFFF;
   font-size: 12px;
   font-weight: bold;
-  padding: 12px 45px;
+
   letter-spacing: 1px;
   text-transform: uppercase;
   transition: transform 80ms ease-in;
@@ -107,10 +107,10 @@ button:focus {
 input {
   background-color: #eee;
   border: none;
-  padding: 12px 15px;
-  margin: 8px 0;
+
+
   width: 288px;
-  height: 48px;
+  height: 55px;
 }
 
 
