--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,16 +1,46 @@
+
 <div class="bar">
+ <div class="left">
   @for (item of menuItems; track item.name){
     <ul class="listul">
       <li>
-        <a (click)="selectItem(item)" [class]="item.active?'active':''" [routerLink]="item.router">{{ item.name }}
-        <i [class]="item.classIcon"></i>
-      </a></li>
+        <a (click)="item.name === 'LOGOUT' ? signOut() : selectItem(item)" [class]="item.active?'active':''"
+           [routerLink]="item.router">{{ item.name }}
+          <i [class]="item.classIcon"></i>
+        </a>
+      </li>
     </ul>
   }
-  <button (click)="signOut()">
-      LogOut
-  </button>
+ </div>
+ <div class="right">
+<tui-avatar
+    new
+    class="avatar"
+    [avatarUrl]="user.photoURL"
+    [tuiDropdown]="dropdownContent"
+    [tuiDropdownManual]="open"
+    (click)="onClick()"
+
+></tui-avatar>
+
+ </div>
+
+
+
 </div>
+<ng-template #dropdownContent>
+  <button
+    iconRight="tuiIconLogOut"
+    tuiButton
+    type="button"
+    class="tui-space_right-3 tui-space_bottom-3"
+    id="avatar"
+    [disabled]="false"
+    (click)="signOut()"
+  >
+    Logout
+  </button>
+</ng-template>
 
 
 
