--- a/src/components/navbar/navbar.component.scss
+++ b/src/components/navbar/navbar.component.scss
@@ -14,6 +14,12 @@ li {
   flex-direction: row;
   background-color: #333;
   align-items: center;
+  justify-content: space-between;
+
+}
+.left{
+  display: flex;
+  flex-direction: row;
 }
 #add{
   color: white;
@@ -77,3 +83,18 @@ dialog h2 {
     }
   }
 }
+.signoutbutton{
+color: #eaeaea;
+  background-color:#333333;
+margin-right: 50%;
+
+}
+tui-dropdown{
+  max-height: 30px;
+}
+#avatar{
+  max-width: 100px;
+  max-height: 30px;
+  //padding: 0;
+}
+
